<resources>
    <string name="app_name">MoneySaver</string>
    <string name="button_add">Dodaj</string>
    <string name="cancel">Anuluj</string>

    <string name="history_activity_title">Historia</string>
    <string name="incomes_title_bar">Przychody</string>
    <string name="outcomes_title_bar">Wydatki</string>
    <string name="settings_title_bar">Ustawienia</string>

    <string name="category_spinner_title">Wybierz kategorię</string>
    <string name="add_new_category">Dodaj kategorię</string>
    <string name="choose_category">Nie wybrano kategorii</string>
    <string name="new_cateogry_added">Dodano kategorię</string>
    <string name="catggory_not_added">Podaj nazwę</string>
    <string name="amount_field_hint">Kwota</string>
    <string name="invalid_amount">Nie podano kwoty</string>
    <string name="add_outcome">Dodaj wydatek:</string>
    <string name="add_income">Dodaj przychód:</string>
    <string name="add_beginning_amount">Dodaj kwotę początkową:</string>
    <string name="amount_remaining">Pozostała kwota: </string>

    <string name="start_date">Data rozpoczęcia:</string>
    <string name="end_date">Data zakończenia:</string>
    <string name="invalid_date_range">Data rozpoczęcia nie może być większa niż data zakończenia!</string>

    <string name="date">Data</string>
    <string name="amount">Kwota</string>
    <string name="category">Kategoria</string>

    <string name="no_amount_remaining_in_db">Nie podano</string>

    <string name="zl_prefix"> zł</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
</resources>
