<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outcome_fragment_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_below="@id/pager">

    <TextView android:id="@+id/add_outcome_text_view"
        android:text="@string/add_outcome"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText android:id="@+id/outcome_edit"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/add_outcome_text_view"
        android:padding="4dp"
        android:textSize="17sp"
        android:inputType="numberDecimal"
        android:hint="@string/amount_field_hint"
        android:background="@drawable/back_with_borders"/>

    <Spinner android:id="@+id/spinner_outcome_category"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/back_with_borders"
        android:layout_marginLeft="10dp"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@id/outcome_edit"
        android:layout_toEndOf="@id/outcome_edit"
        android:layout_below="@id/add_outcome_text_view"
        android:prompt="@string/category_spinner_title"/>

    <Button android:id="@+id/outcome_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="2dp"
        android:layout_below="@id/add_outcome_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/outcome_edit"
        android:text="@string/button_add"
        android:onClick="onClick"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:id="@+id/amount_remaining_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/amount_remaining"
            android:layout_alignParentBottom="true"/>
        <TextView android:id="@+id/amount_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/amount_remaining_text"
            android:layout_toRightOf="@id/amount_remaining_text"
            android:layout_alignParentBottom="true"
            android:layout_alignBaseline="@id/amount_remaining_text"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </RelativeLayout>
</RelativeLayout>