<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_first_run"
    tools:context="com.example.psalata.moneysaver.FirstRunActivity">

    <TextView android:id="@+id/add_beginning_amount_text_view"
        android:text="@string/add_beginning_amount"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText android:id="@+id/regular_outcome_edit"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/add_outcome_text_view"
        android:padding="4dp"
        android:textSize="17sp"
        android:inputType="numberDecimal"
        android:hint="@string/amount_field_hint"
        android:background="@drawable/back_with_borders"/>

    <Button android:id="@+id/regular_outcome_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:padding="2dp"
        android:layout_below="@id/add_outcome_text_view"
        android:layout_toRightOf="@id/regular_outcome_edit"
        android:layout_toEndOf="@id/add_outcome_text_view"
        android:layout_alignBaseline="@id/regular_outcome_edit"
        android:text="@string/button_add"
        android:onClick="onClick"/>

</RelativeLayout>
